--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-﻿asgiref==3.10.0
+asgiref==3.10.0
 Django==5.2.7
 pillow==12.0.0
+python-dateutil==2.9.0.post0
 sqlparse==0.5.3
 typing_extensions==4.15.0
 tzdata==2025.2
